--- a/src/styles/TrafficLight.css
+++ b/src/styles/TrafficLight.css
@@ -2,17 +2,16 @@
     width: 20px;
     height: 90px;
     background-color: black;
-    margin-left: 55%;
 }
 
 .traffic-light-body {
     width: 120px;
     height: 280px;
     background-color: black;
-    margin: auto;
+    
     border-radius: 15px;
     padding: 10px;
-    margin-left: 50%;
+    
 }
 
 .traffic-light-body div {
@@ -43,6 +42,7 @@
 
 .changeLight {
     margin-top: 20px;
-    margin-left: 50%;
+    display: grid;
+    justify-items: center;
 
 }
